# legislatie-just-ro-parser

./: .pre-commit-config.yaml  AGENT_RULES.md  CHANGELOG.md  Dockerfile  Makefile  README.md  README.ro.md  pyproject.toml
.github/workflows/: ruff.yml
leropa/: __main__.py  cli.py  document_cache.py  json_utils.py  parser.py  xlsx.py
leropa/llm/: __init__.py  export_legal_articles_to_md.py  fine_tune.py  rag_legal_qdrant.py
leropa/parser/: __init__.py  annex.py  article.py  book.py  chapter.py  document_info.py  fetch_document.py  full.py  history_entry.py  note.py  paragraph.py  parse_html.py  section.py  sub_paragraph.py  subsection.py  title.py  types.py  utils.py
leropa/web/: __init__.py  utils.py
leropa/web/routes/: __init__.py  chat.py  convert.py  document_detail.py  documents.py  export_md.py  models.py  rag_ask.py  rag_delete.py  rag_ingest.py  rag_recreate.py  rag_search.py  rag_start_qdrant.py  root.py
leropa/web/templates/: base.html  document_detail.html  documents.html  documents_admin.html  index.html
tests/: conftest.py  test_cli.py  test_document_cache.py  test_export_legal_articles_to_md.py  test_fetch_document.py  test_json_utils.py  test_llm.py  test_parser.py  test_rag_legal_qdrant.py  test_web.py  test_web_utils.py
