[project]
authors = [
    { name = "Nicu Tofan", email = "nicu.tofan@gmail.com" },
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Typing :: Typed",
]
description = "Read legal documents from https://legislatie.just.ro/ and convert them into structured data"
dynamic = ["version"]
name = "leropa"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.8,<9",
  "dotenv>=0.9.9",
  "requests>=2.32.3,<3",

]

[project.scripts]
leropa = "leropa.__main__:cli"

[project.optional-dependencies]
dev = [
  "ruff",
  "build",
  "mypy",
  "pre-commit",
  "pytest-cov",
  "pytest-mock",
  "pytest",
  "twine",
  "wheel",
]


[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["venv*", "playground*"]

[tool.setuptools_scm]
fallback_version = "0.0.1-dev"
write_to = "leropa/__version__.py"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]  # E=pycodestyle, F=pyflakes, I=imports
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
